--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<licenses>
 		<license>
 			<name>MIT License</name>
-			<url>http://www.sikuli.org/LICENSE.txt</url>
+			<url>http://www.vizweb.org/LICENSE.txt</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
@@ -29,11 +29,11 @@
 		</developer>
 	</developers>
 
-<!-- 	<scm>
-		<connection>scm:git:git@bitbucket.org:doubleshow/sikulix.git</connection>
-		<developerConnection>scm:git:git@bitbucket.org:doubleshow/sikulix.git</developerConnection>
-		<url>git@bitbucket.org:doubleshow/sikulix.git</url>
-	</scm> -->
+	<scm>
+		<connection>scm:git:git@bitbucket.org:rmardiko/vizweb.git</connection>
+		<developerConnection>scm:git:git@bitbucket.org:rmardiko/vizweb.git</developerConnection>
+		<url>git@bitbucket.org:rmardiko/vizweb.git</url>
+	</scm>
 
 	<groupId>org.vizweb</groupId>
 	<artifactId>vizweb</artifactId>
